# Challenge

./: .gitignore  README.md  data_clean.csv  data_for_model.csv  data_raw.csv  main.ipynb  model.ipynb  pyproject.toml  requirements.txt
